add ping example with init default interface (tap device)
Signed-off-by: Maxim Uvarov <maxim.uvarov@linaro.org>

--- a/lwip/Makefile
+++ b/lwip/Makefile
@@ -5,7 +5,8 @@ include $(LWIPDIR)/Filelists.mk
 LWIPUNIXPORT = $(LWIPDIR)/../contrib/ports/unix/port/perf.c \
 		$(LWIPDIR)/../contrib/ports/unix/port/sys_arch.c \
 		$(LWIPDIR)/../contrib/ports/unix/port/netif/sio.c \
-		$(LWIPDIR)/../contrib/ports/unix/port/netif/fifo.c
+		$(LWIPDIR)/../contrib/ports/unix/port/netif/fifo.c \
+		$(LWIPDIR)/../contrib/ports/unix/port/netif/tapif.c
 
 lwipnetif_SRCS = \
     ${LWIPDIR}/netif/ethernet.c     \
@@ -37,9 +38,14 @@ lwipcore4_SRCS = \
 example_app = $(LWIPDIR)/../contrib/apps/httpserver/httpserver-netconn.c \
 		http_server.c
 
+ping_app = ping.c
+
 all:
 	@echo compiling lwip unix port
-	@${CC} -I$(LWIPDIR)/../contrib/ports/unix/lib -I$(LWIPDIR)/../contrib/ports/unix/port/include -I$(LWIPDIR)/include \
+	@${CC} $(CFLAGS) -DLWIP_DEBUG -O0 -g \
+		-I$(LWIPDIR)/../contrib/ports/unix/lib \
+		-I$(LWIPDIR)/../contrib/ports/unix/port/include \
+		-I$(LWIPDIR)/include \
 		$(COREFILES) \
 		$(lwipnetif_SRCS) \
 		$(lwipcore4_SRCS) \
@@ -49,7 +55,7 @@ all:
 	@ls -l libipxdp.so
 	@file libipxdp.so
 	@echo compiling example app
-	@${CC} $(example_app) -I$(LWIPDIR)/../contrib/ports/unix/lib \
+	@${CC} $(CFLAGS) -O0 -g $(example_app) -I$(LWIPDIR)/../contrib/ports/unix/lib \
 			     -I$(LWIPDIR)/../contrib/ports/unix/port/include \
 			     -I$(LWIPDIR)/include  \
 			     -I$(LWIPDIR)/../contrib \
@@ -57,11 +63,21 @@ all:
 			     -L. -lipxdp -o http_server
 	@ls -l http_server
 
+	@echo compiling example ping
+	@${CC} $(CFLAGS) -O0 -g $(ping_app) -I$(LWIPDIR)/../contrib/ports/unix/lib \
+			     -I$(LWIPDIR)/../contrib/ports/unix/port/include \
+			     -I$(LWIPDIR)/include  \
+			     -I$(LWIPDIR)/../contrib \
+			     -I$(LWIPDIR)/../contrib/apps/httpserver \
+			     -L. -lipxdp -o ping
+
+	@ls -l ping
+
 check:
-	export LD_LIBRARY_PATH=.
-	./http_server
+	LD_LIBRARY_PATH=. ./ping
 
 clean:
 	rm -rf libipxdp.so
 	rm -rf http_server
+	rm -rf ping 
 
